--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         display:flex;
         align-items:center;
         gap:18px;
-        cursor:pointer;
+        cursor:default; /* تم تغييرها لتصبح مؤشر عادي */
     }
     .brand img{height:60px;width:auto;object-fit:contain}
     .brand h1{margin:0;font-size:20px;font-weight:700;letter-spacing:.2px;white-space:nowrap}
@@ -304,13 +304,7 @@
         <h1>دليل تليفونات البريد المصري</h1>
     </div>
     <div class="actions-bar">
-        <a href="./updates.html" class="icon-btn" title="تحديث">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-        </a>
         <button id="themeToggleBtn" class="icon-btn" title="الوضع الليلي">🌙</button>
-        <button id="favPageBtn" class="icon-btn" title="المفضلة" style="display:none">⭐</button>
-        <button id="homePageBtn" class="icon-btn" title="الرئيسية">🏠</button>
-        <button id="toggleViewBtn" class="toggle-btn" title="تبديل عرض البيانات" style="display:none">عرض الكروت</button>
     </div>
 </header>
 
@@ -363,7 +357,6 @@
     const THEME_KEY = 'ep_theme';
     const themeToggleBtn = document.getElementById('themeToggleBtn');
     const brandLink = document.getElementById('brandLink');
-    const homePageBtn = document.getElementById('homePageBtn');
 
     function initTheme(){
         const theme = localStorage.getItem(THEME_KEY) || 'light';
@@ -374,14 +367,6 @@
         const isDark = document.body.classList.toggle('dark-mode');
         localStorage.setItem(THEME_KEY, isDark ? 'dark' : 'light');
         themeToggleBtn.textContent = isDark ? '☀️' : '🌙';
-    });
-
-    // Navigation
-    brandLink.addEventListener('click', () => {
-        window.location.href = 'index.html';
-    });
-    homePageBtn.addEventListener('click', () => {
-        window.location.href = 'index.html';
     });
 
     initTheme();
